# metis-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  multi-os.yml  rustdoc.yml
examples/: graph.rs
metis/: all.html  constant.NOPTIONS.html  enum.Error.html  enum.NewGraphError.html  enum.NewMeshError.html  fn.mesh_to_dual.html  index.html  sidebar-items.js  struct.Dual.html  struct.Graph.html  struct.InvalidGraphError.html  struct.InvalidMeshError.html  struct.Mesh.html  type.Idx.html  type.Real.html  type.Result.html
metis-sys/: Cargo.toml  build.rs  wrapper.h
metis-sys/src/: lib.rs
metis/option/: enum.CType.html  enum.IpType.html  enum.ObjType.html  enum.PType.html  enum.RType.html  index.html  sidebar-items.js  struct.CCOrder.html  struct.Compress.html  struct.Contig.html  struct.DbgLvl.html  struct.MinConn.html  struct.NCuts.html  struct.NIter.html  struct.NSeps.html  struct.No2Hop.html  struct.PFactor.html  struct.Seed.html  struct.UFactor.html  trait.Opt.html
metis_sys/: all.html  constant.METIS_NOPTIONS.html  constant.METIS_VER_MAJOR.html  constant.METIS_VER_MINOR.html  constant.METIS_VER_SUBMINOR.html  constant.mctype_et_METIS_CTYPE_RM.html  constant.mctype_et_METIS_CTYPE_SHEM.html  constant.mdbglvl_et_METIS_DBG_COARSEN.html  constant.mdbglvl_et_METIS_DBG_CONNINFO.html  constant.mdbglvl_et_METIS_DBG_CONTIGINFO.html  constant.mdbglvl_et_METIS_DBG_INFO.html  constant.mdbglvl_et_METIS_DBG_IPART.html  constant.mdbglvl_et_METIS_DBG_MEMORY.html  constant.mdbglvl_et_METIS_DBG_MOVEINFO.html  constant.mdbglvl_et_METIS_DBG_REFINE.html  constant.mdbglvl_et_METIS_DBG_SEPINFO.html  constant.mdbglvl_et_METIS_DBG_TIME.html  constant.mgtype_et_METIS_GTYPE_DUAL.html  constant.mgtype_et_METIS_GTYPE_NODAL.html  constant.miptype_et_METIS_IPTYPE_EDGE.html  constant.miptype_et_METIS_IPTYPE_GROW.html  constant.miptype_et_METIS_IPTYPE_METISRB.html  constant.miptype_et_METIS_IPTYPE_NODE.html  constant.miptype_et_METIS_IPTYPE_RANDOM.html  constant.mobjtype_et_METIS_OBJTYPE_CUT.html  constant.mobjtype_et_METIS_OBJTYPE_NODE.html  constant.mobjtype_et_METIS_OBJTYPE_VOL.html  constant.moptions_et_METIS_OPTION_BALANCE.html  constant.moptions_et_METIS_OPTION_CCORDER.html  constant.moptions_et_METIS_OPTION_COMPRESS.html  constant.moptions_et_METIS_OPTION_CONTIG.html  constant.moptions_et_METIS_OPTION_CTYPE.html  constant.moptions_et_METIS_OPTION_DBGLVL.html  constant.moptions_et_METIS_OPTION_DROPEDGES.html  constant.moptions_et_METIS_OPTION_FAST.html  constant.moptions_et_METIS_OPTION_GTYPE.html  constant.moptions_et_METIS_OPTION_HELP.html  constant.moptions_et_METIS_OPTION_IPTYPE.html  constant.moptions_et_METIS_OPTION_MINCONN.html  constant.moptions_et_METIS_OPTION_NCOMMON.html  (+57 more)
search.desc/metis/: metis-desc-0-.js
search.desc/metis_sys/: metis_sys-desc-0-.js
src/: lib.rs  option.rs  sprs.rs
src/metis/: lib.rs.html  option.rs.html
src/metis_sys/: lib.rs.html
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/metis/option/: trait.Opt.js
type.impl/core/result/: enum.Result.js
type.impl/metis_sys/: type.idx_t.js  type.real_t.js
type.impl/std/: primitive.f32.js
