[workspace]
members = [".", "metis-sys"]


[package]
name = "metis"
version = "0.1.2"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LIHPC-Computational-Geometry/metis-rs"
description = "Idiomatic wrapper for METIS, the serial graph partitioner and fill-reducing matrix orderer"
categories = ["api-bindings", "mathematics"]
keywords = ["graph", "mesh", "matrix", "partitioning", "ordering"]


[features]
# See optional dependencies below.


[dependencies]
metis-sys = { version = "0.2", path = "metis-sys" }

# Optional dependencies
sprs = { version = "0.11", default-features = false, optional = true }


[package.metadata.docs.rs]
all-features = true
