[workspace]
members = [".", "metis-sys"]

[package]
name = "metis"
version = "0.1.2"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LIHPC-Computational-Geometry/metis-rs"
description = "Idiomatic wrapper for METIS, the serial graph partitioner and fill-reducing matrix orderer"
categories = ["api-bindings", "mathematics"]
keywords = ["graph", "mesh", "matrix", "partitioning", "ordering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["metis-sys/default"]

# Build and statically link to METIS and GKLib. By default metis-rs expects an
# existing METIS install and links dynamically to it.
vendored = ["metis-sys/vendored"]

# Regenerate bindings in metis-sys/gen/bindings.rs from METIS in the "vendor"
# directory. Also enabled "vendored".
generate-bindings = ["vendored", "metis-sys/generate-bindings"]


[dependencies]
metis-sys = { version = "0.2", path = "metis-sys", default-features = false }
