[workspace]
members = [".", "metis-sys"]

[package]
name = "metis"
version = "0.2.1"
authors = ["Hubert Hirtz <hubert@hirtz.pm>", "Cedric Chevalier <cedric.chevalier@cea.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LIHPC-Computational-Geometry/metis-rs"
description = "Idiomatic wrapper for METIS, the serial graph partitioner and fill-reducing matrix orderer"
categories = ["api-bindings", "mathematics"]
keywords = ["graph", "mesh", "matrix", "partitioning", "ordering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["metis-sys/default"]

# Build and statically link to METIS and GKLib.
vendored = ["metis-sys/vendored"]

# Use existing METIS install and links dynamically to it.
use-system = ["metis-sys/use-system"]

[dependencies]
metis-sys = { version = "0.3", path = "metis-sys", default-features = false }
