[package]
name = "metis-sys"
version = "0.2.1"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LIHPC-Computational-Geometry/metis-rs"
description = "Raw FFI to METIS, the serial graph partitioner and fill-reducing matrix orderer"
readme = "../README.md"
categories = ["external-ffi-bindings", "mathematics"]
keywords = ["graph", "mesh", "matrix", "partitioning", "ordering"]


[features]
default = ["dep:bindgen"]

# Build and statically link to METIS and GKLib. By default metis-sys expects an
# existing METIS install and links dynamically to it.
vendored = ["dep:cc"]

# Regenerate bindings in metis-sys/gen/bindings.rs from METIS in the "vendor"
# directory. Also enables "vendored".
generate-bindings = ["vendored", "dep:bindgen"]


[build-dependencies]
bindgen = { version = "0.66", default-features = false, features = ["runtime"], optional = true }
cc = { version = "1", features = ["parallel"], optional = true }
